# nutrisnap

./: ARCHITECTURE_VARIANTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  nutrisnap_project_requirements_checklist.html  project requirements.md  specification.md
.claude/skills/commit-push/: SKILL.md
.claude/skills/restart-services/: SKILL.md
.claude/skills/update-readme/: SKILL.md
.github/workflows/: backend-ci.yml  evals.yml  frontend-ci.yml
.pgadmin/: servers.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 3a9801ca256a_init_schema.py  7b21e8c4f15a_add_target_weight_kg_to_users.py  a2c4f6d8e012_drop_usda_food_source.py  b5e1d3f72a01_drop_fatsecret_food_source.py
backend/app/: main.py
backend/app/api/: deps.py  routes.py  schemas.py
backend/app/bot/: application.py  jobs.py  keyboards.py  run_polling.py
backend/app/bot/handlers/: calculate.py  common.py  meal.py  onboard.py  onboard_state.py  recipe.py  recommend.py  start.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  models.py  seed_foods.py  session.py
backend/app/evals/: golden.jsonl  run.py
backend/app/graph/: graph.py  recommender.py  state.py
backend/app/graph/nodes/: ask_weight.py  error.py  finalize.py  guiderail.py  moderation.py  nutrition.py  parser.py  reflect.py  route.py  transcribe.py  vision.py
backend/app/mcp/: README.md  __init__.py  client.py  server.py
backend/app/rag/: embeddings.py  ingest_foods.py  qdrant.py
backend/app/repositories/: food_repo.py  meal_repo.py  user_repo.py
backend/app/services/: disambiguation_cache.py  fatsecret.py  meal_drafts.py  meal_type_inference.py  nudge_throttle.py  nutrition_calc.py  nutrition_targets.py  openai_client.py  openfoodfacts.py  photo_buffer.py  recipe_drafts.py  recommendation_cache.py
backend/scripts/: healthcheck.py  healthcheck_bot.py
backend/tests/: conftest.py  test_mcp_client.py  test_mcp_server.py
docs/: BOT_FEATURES.md  DATABASE_CONCURRENCY.md  EVALS.md  MINI_APP.md  NUTRITION_LOOKUP.md  PIPELINE_V2.md  VALUE_PROPOSITION.md  project requirements.md  raw specification.md  specification.md
docs/golden/: food_diary.md
frontend/: .env.example  .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  queries.ts  router.tsx  telegram.ts  types.ts  vite-env.d.ts
frontend/src/components/: BottomSheet.tsx  CircularProgress.tsx  FabActionSheet.tsx  FoodForm.tsx  FormFields.tsx  MacroBar.tsx  MealCard.tsx  MealTypeSheet.tsx  Onboarding.tsx  TabBar.tsx
frontend/src/lib/: api.ts  date.ts  toast.tsx
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  MyFoods.tsx  Profile.tsx
frontend/src/schemas/: profile.ts
